gallery.css
header {
    text-align: center;
}

main {
    text-align: center;
}

.s-bar {
    background-color: white;
    width: 60%;
    text-align: center;
    margin: 10px auto;
    padding: 5px;
    border: 1px solid black;
    outline: 1px solid grey;
    border-radius: 20px;
}

.s-bar input {
    font-size: 20px;
    border-radius: 10px;
    padding: 10px;
}

.s-bar i{
    border: 2px none black;
    border-radius: 10px;
    padding: 5px;
    cursor: pointer;
    padding: 10px;
    background-color: white;
}

.s-bar i:hover{
    background-color: whitesmoke;
    color: lightskyblue;
    border: 2px solid lightskyblue;
}

/* RECIPE */

.recipe {
    display: inline-block;
    border: 2px ridge grey;
    background-color: rgb(230, 207, 131);
    border-radius: 20px;
    padding: 10px;
    text-align: center;
    margin: 20px;
    width: 30%;
    height: auto;
}

.recipe:hover{
    margin-bottom: 20px;
    box-shadow: 0px 0px 18px 6px rgba(100, 100, 100, 0.6);
    transition: 0.4s;
}

.recipe img{
    border: 2px solid black;
    height: 250px;
    width: 250px;
    border-radius: 20px;
}

/* Learn button */

.recipe a{
   display: block; /* Make the "view button" to push icons below*/
   text-decoration: none;
   color: white;
   width: 50%; /* Width of view button */
   background-color: #00cc00;
   border: 3px solid white;
   border-radius: 15px;

   margin: 10px auto;
   padding: 10px;
}

.recipe a:hover{
   text-decoration: none;
   color: white;
   background-color: #05df05;
   padding: 10px;
}

.recipe a:active{
   text-decoration: none;
   color: white;
   background-color: #31b631;
   padding: 10px;
}

/* Others */

.recipe i{ /* The recipe icons (bookmark, share and info)*/
    border: 2px solid black;
    border-radius: 20px;
    padding: 5px;
    font-size: 16px; /* Size given */
    cursor: pointer;
    background-color: white;
}

.recipe i:hover {
    background-color: whitesmoke;
    color: lightskyblue;
    border: 2px solid lightskyblue;
    border-radius: 20px;
}

